[package]
name = "enode-test-spin"
authors = ["michham"]
description = "Enode & Spin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
base64 = "0.22.0"
chrono = { version = "0.4.37", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
spin-sdk = "3.0.1"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
spin-contrib-http = "0.0.7"
utoipa = "4"
#tokio = { version = "1", features = ["full"] }
[workspace]
